--- a/package.json
+++ b/package.json
@@ -9,14 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.7",
+    "@headlessui/react": "^1.7.10",
     "@next/font": "13.1.6",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.10",
+    "@uiball/loaders": "^1.2.6",
+    "connectkit": "^1.1.3",
+    "device-detector-js": "^3.0.3",
+    "ethers": "^5.7.2",
+    "graphql": "^16.6.0",
     "next": "13.1.6",
+    "node-fetch": "^3.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "react-hot-toast": "^2.4.0",
+    "typescript": "4.9.5",
+    "wagmi": "^0.11.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
