--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "graphql": "^16.6.0",
     "next": "13.1.6",
     "node-fetch": "^3.3.0",
+    "qrcode": "^1.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
